# easy_proxies

./: .gitignore  AI_PROXY_ACCESS.md  CF_SCORE.md  EXTERNAL_SDK.md  IP_REPUTATION.md  LOCAL_USAGE.md  PROXY_EXTRACTOR.md  README.md  README_ZH.md  WEB_UI_ARCHITECTURE.md  check_proxy_pool.sh  config.example.yaml  docker-compose.desktop.yml  epctl.sh  verify_zo_token.mjs
docs/: free-proxy-sources-modular-plan.md  proxy-tiering-rules.md  quality-background-jobs.md
internal/androidports/: ports.go  ports_test.go
internal/app/: app.go
internal/boxmgr/: manager.go  manager_android_test.go  manager_androidproxy_test.go  manager_node_config_test.go  manager_reload_test.go
internal/builder/: builder.go  builder_region_test.go
internal/cloudflarecheck/: cache.go  cache_test.go  checker.go  result.go  scoring.go  scoring_test.go  trace.go  trace_test.go
internal/config/: config.go  config_hysteria2_test.go  config_settings_test.go  free_proxy_sources_test.go
internal/geoip/: geoip.go  geoip_download_test.go  geoip_lookup_test.go  iso3166_data.go  router.go  router_lifecycle_test.go  router_test.go
internal/monitor/: manager.go  manager_test.go  probe_failure_summary_test.go  quality_adapter.go  server.go  server_android_extractor_test.go  server_export_test.go  server_extractor_test.go  server_logs_test.go  server_quality.go  (+7 more)
scripts/: classify_free_proxies.py  generate_iso3166.py  smoke_runtime_api.py
sdk/python/: README.md  pyproject.toml
sdk/python/src/easy_proxies_sdk/: __init__.py  client.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+114 files in other folders)
